...
    return (
        <CompassIcon
            name='book-outline'
            size={22}
            color={theme.centerChannelColor}
            style={genericStyle}
            testID='bookmark-generic-icon'
        />
    );
};

export default BookmarkIcon;

