...

    const button = (
        <Button
            backgroundStyle={showLarge ? styles.largeButton : styles.smallButton}
            onPress={onPress}
            hitSlop={hitSlop}
            testID='channel_info.add_bookmark.button'
            text={showLarge ? formatMessage({id: 'channel_info.add_bookmark', defaultMessage: 'Add a bookmark'}) : ''}
            textStyle={showLarge ? styles.largeButtonText : styles.smallButtonText}
            theme={theme}
            iconComponent={
                <CompassIcon
                    name='plus'
...
